tests/e2e/try_throw_error.error
Error: syntax error in story at line 4, column 11

4|        throw error
                ^^^^^

E0101: Variable `error` has not been defined.
